@@ -1,3 +1,9 @@
+2007-07-06  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* UnitTests/TestEvents.cs,
+	  SystemInfoExtension/SystemInfoExtension.addin.xml: Minor fixes.
+	* Makefile.am: Added new test target.
+
 2007-07-05  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* UnitTests/UnitTests.mdp, UnitTests/Makefile.am,
